# aptos-indexer-processors

.github/workflows/: auto-update-upstream-main.yaml  lint.yaml  nightly-check-protobuf-compatibility.yaml
rust/: Cargo.toml  Dockerfile
rust/delete-old-recent-records/: Cargo.toml
rust/delete-old-recent-records/src/: main.rs
rust/processor/: Cargo.toml
rust/processor/migrations/2024-04-23-130632_add_accounts/: up.sql
rust/processor/migrations/2024-04-30-103333_create_recent_events/: down.sql  up.sql
rust/processor/migrations/2024-04-30-113635_create_recent_transactions/: down.sql  up.sql
rust/processor/migrations/2025-03-20-102435_add_launchpad_transaction/: down.sql  up.sql
rust/processor/src/: schema.rs  worker.rs
rust/processor/src/db/common/models/: mod.rs
rust/processor/src/db/postgres/: schema.rs
rust/processor/src/models/: mod.rs
rust/processor/src/models/account_models/: account.rs
rust/processor/src/models/recent_models/: mod.rs  recent_block_metadata_transactions.rs  recent_events.rs  recent_transactions.rs  recent_user_transactions.rs
rust/processor/src/models/token_v2_models/: v2_token_utils.rs
rust/processor/src/processors/: mercato_account_processor.rs  mercato_indexer_processor.rs  mercato_processor.rs  mercato_recent_data_processor.rs  mercato_token_processor.rs  mercato_token_v2_processor.rs  mod.rs  token_v2_processor.rs  user_transaction_processor.rs
rust/processor/src/utils/: counters.rs  database.rs  util.rs
rust/sdk-processor/src/: schema.rs
scripts/: auto-update-upstream.sh
(+7 files in other folders)
